tooling/nargo_cli/tests/snapshots/compile_failure/regression_5008/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused variable self
   ┌─ src/main.nr:10:31
   │
10 │     unconstrained fn crash_fn(self) {}
   │                               ---- unused variable
   │

error: Cannot pass a mutable reference from a constrained runtime to an unconstrained runtime
   ┌─ src/main.nr:17:14
   │
17 │     unsafe { foo.crash_fn() };
   │              ---
   │

Aborting due to 1 previous error
